Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ISS will next pass over New York at 1588176000 for 573 seconds"
+    "#ISS will next pass over New York "
    ]
   },
   {
