Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,8 @@
     "location = {'lat': '40.71', 'lon': '-74'}\n",
     "response = requests.get('http://api.open-notify.org/iss-pass.json', params=location)\n",
     "print(response)\n",
-    "print(response.text)"
+    "print(response.text)\n",
+    "import date"
    ]
   },
   {
