Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -178,56 +178,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Response [200]>\n",
-      "{\n",
-      "  \"message\": \"success\", \n",
-      "  \"request\": {\n",
-      "    \"altitude\": 100, \n",
-      "    \"datetime\": 1588174908, \n",
-      "    \"latitude\": 40.71, \n",
-      "    \"longitude\": -74.0, \n",
-      "    \"passes\": 5\n",
-      "  }, \n",
-      "  \"response\": [\n",
-      "    {\n",
-      "      \"duration\": 573, \n",
-      "      \"risetime\": 1588176000\n",
-      "    }, \n",
-      "    {\n",
-      "      \"duration\": 604, \n",
-      "      \"risetime\": 1588230363\n",
-      "    }, \n",
-      "    {\n",
-      "      \"duration\": 647, \n",
-      "      \"risetime\": 1588236138\n",
-      "    }, \n",
-      "    {\n",
-      "      \"duration\": 578, \n",
-      "      \"risetime\": 1588242018\n",
-      "    }, \n",
-      "    {\n",
-      "      \"duration\": 572, \n",
-      "      \"risetime\": 1588247892\n",
-      "    }\n",
-      "  ]\n",
-      "}\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'requests' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-2e9c22362d76>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlocation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'lat'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'40.71'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'lon'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'-74'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'http://api.open-notify.org/iss-pass.json'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlocation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'requests' is not defined"
      ]
     }
    ],
    "source": [
     "location = {'lat': '40.71', 'lon': '-74'}\n",
     "response = requests.get('http://api.open-notify.org/iss-pass.json', params=location)\n",
-    "print(response)\n",
-    "print(response.text)\n",
-    "import date"
+    "\n",
+    "import datetime"
    ]
   },
   {
