Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -194,6 +194,7 @@
     }
    ],
    "source": [
+    "import \n",
     "location = {'lat': '40.71', 'lon': '-74'}\n",
     "response = requests.get('http://api.open-notify.org/iss-pass.json', params=location)\n",
     "\n",
