Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,8 @@
     "location = {'lat': '40.71', 'lon': '-74'}\n",
     "response = requests.get('http://api.open-notify.org/iss-pass.json', params=location)\n",
     "\n",
-    "import datetime"
+    "import datetime\n",
+    "print(The nex)"
    ]
   },
   {
