Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
     "response = requests.get('http://api.open-notify.org/iss-pass.json', params=location)\n",
     "\n",
     "import datetime\n",
-    "print('The next five times that New Y')"
+    "print('The next five times that New York can see the space station are: ')\n"
    ]
   },
   {
