Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -189,7 +189,7 @@
     "\n",
     "import datetime\n",
     "print('The next five times that New York can see the space station are: ')\n",
-    "iss_pass = "
+    "for iss"
    ]
   },
   {
