Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -189,7 +189,8 @@
     "\n",
     "import datetime\n",
     "print('The next five times that New York can see the space station are: ')\n",
-    "for iss_pass in response.json[]"
+    "for iss_pass in response.json['response']:\n",
+    "    "
    ]
   },
   {
