--- a/index.ipynb
+++ b/index.ipynb
@@ -190,7 +190,7 @@
     "import datetime\n",
     "print('The next five times that New York can see the space station are: ')\n",
     "for iss_pass in response.json['response']:\n",
-    "    print(iss_pass)"
+    "    print(\" - {timestamp}\".format(timestamp=datetime.datetime.fromtimestamp(iss_pass['risetime'])))"
    ]
   },
   {
