Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,7 @@
     "import requests\n",
     "\n",
     "location = {'lat': '40.71', 'lon': '-74'}\n",
-    "response = requests.get('http://api.open-notify.org/iss-pass.json?lat=40.71,lon= params=location)\n",
+    "response = requests.get('http://api.open-notify.org/iss-pass.json?lat=40.71,lon=-74')\n",
     "\n",
     "import datetime\n",
     "print('The next five times that New York can see the space station are: ')\n",
