--- a/index.ipynb
+++ b/index.ipynb
@@ -214,6 +214,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "print(\"The next five times DC can see the space station are:\")\n",
+    "for iss_pass in response.json()['response']:\n",
+    "    print(\" - {timestamp}\".format(timestamp=datetime.datetime.fromtimestamp(iss_pass['risetime'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
