--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
    "outputs": [],
    "source": [
     "import datetime\n",
-    "print(\"The next five times DC can see the space station are:\")\n",
+    "print(\"The next five times that New York can see the space station are:\")\n",
     "for iss_pass in response.json()['response']:\n",
     "    print(\" - {timestamp}\".format(timestamp=datetime.datetime.fromtimestamp(iss_pass['risetime'])))"
    ]
